# django-magic-link

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/.workflows/: tox.yml
magic_link/: __init__.py  admin.py  apps.py  exceptions.py  models.py  settings.py  urls.py  views.py
magic_link/migrations/: 0001_initial.py  0002_magiclink_logged_in_at.py  0003_magiclink_accessed_at.py  0004_remove_magiclinkuse_link_is_valid.py  0005_alter_magiclink_id_alter_magiclinkuse_id.py  0005_alter_magiclink_token.py  0006_alter_magiclink_id_alter_magiclinkuse_id  0007_alter_magiclink_token.py
magic_link/templates/: error.html  index.html  logmein.html
magic_link/templates/magic_link/: error.html
tests/: auth.py  models.py  settings.py  test_models.py  test_my_app.py  test_views.py  urls.py
tests/migrations/: 0001_initial.py
